--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,16 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+@layer base {
+  /* make poppins the global font */
+  :root {
+    --font-sans: 'poppins', ui-sans-serif, sans-serif;
+  }
+
+  body {
+    font-family: var(--font-sans);
+  }
+}
+
+@theme {
+  --color-header-border: oklch(0.922 0 0);
+}
